--- a/src/scss/components/_items.scss
+++ b/src/scss/components/_items.scss
@@ -168,7 +168,7 @@
 
 /* Checked State - Foundry Orange */
 input:checked + .slider {
-  background-color: colors.$c-violet;
+  background-color: colors.$c-dark;
 }
 
 /* Move slider on checked */
