--- a/templates/actor/inventory.hbs
+++ b/templates/actor/inventory.hbs
@@ -1,5 +1,5 @@
 {{! Features Tab }}
-<section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='features'>
+<section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='inventory'>
   {{!-- <section class='grid grid-3col'>
     <aside class='sidebar'>
       {{! The grid classes are defined in scss/global/_grid.scss. To use,
@@ -26,7 +26,7 @@
     </section>
   </section> --}}
   <div class="grid grid-3col">
-    <div class="main grid-span-1">{{> ($$ "actor/gears")}}</div>
+    <div class="main grid-span-1">{{> ($$ "actor/items")}}</div>
     <div class="main grid-span-1">{{> ($$ "actor/traits")}}</div>
     <div class="main grid-span-1">{{> ($$ "actor/burdens")}}</div>
   </div>
