--- a/templates/actor/items.hbs
+++ b/templates/actor/items.hbs
@@ -1,20 +1,21 @@
 {{! Gear Tab }}
-<section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='features'>
+<section class='tab inventory {{tab.cssClass}}' data-group='primary' data-tab='inventory'>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
-      <div class='item-formula'>{{localize 'SDM.InventoryItems'}} [{{@root.gearSlotsTaken}}/{{@root.system.item_slots}}]</div>
+      <div class='item-formula'>{{localize 'SDM.InventoryItems'}} [{{@root.itemSlotsTaken}}/{{@root.system.item_slots}}]
+      </div>
       <div class='item-controls'>
         {{#if @root.editable}}
-        <a class='item-control item-create' title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Item' )}}"  data-action='createDoc'
-          data-document-class='Item' data-type='gear'>
+        <a class='item-control item-create' title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Item' )}}"
+          data-action='createDoc' data-document-class='Item' data-type='gear'>
           <i class='fas fa-plus'></i>
           {{localize 'DOCUMENT.New' type=(localize 'TYPE.Item' )}}
         </a>
         {{/if}}
       </div>
     </li>
-    {{#each gears as |item id|}}
+    {{#each items as |item id|}}
     <li class='item flexrow' data-item-id='{{item._id}}' data-drag='true' data-document-class='Item'>
       <div class='item-name'>
         <div class='item-image'>
@@ -33,7 +34,7 @@
           {{item.name}}
           {{#if (notEq item.system.size.unit 'cash')}}
           {{#if (gt item.system.quantity 1)}}
-           x{{item.system.quantity}}
+          x{{item.system.quantity}}
           {{/if}}
           {{/if}}
         </div>
@@ -51,16 +52,24 @@
       </div>
       <div class='item-controls'>
         <a class="item-control">
-          <i class="fa-regular fa-shield" style="{{getReadiedStyle item.system.readied}}" data-action="toggleReadied" title="Toggle Readied Status"></i>
+          <i class="fa-regular fa-shield" style="{{getReadiedStyle item.system.readied}}" data-action="toggleReadied"
+            {{#if item.system.readied}}
+              title="{{localize 'SDM.ItemReadied' }}"
+            {{else}}
+              title="{{localize 'SDM.ItemNotReadied'}}"
+            {{/if}}
+          ></i>
         </a>
         <a class="item-control">
-          <i class="fa-regular fa-exchange" data-action="transferItem" title="Transfer Gear"></i>
+          <i class="fa-regular fa-exchange" data-action="transferItem" title="{{localize "DOCUMENT.Transfer" type=(localize 'TYPE.Item')}}"></i>
         </a>
-        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=' Gear'}}' data-action='viewDoc'>
+        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Item')}}'
+          data-action='viewDoc'>
           <i class='fas fa-edit'></i>
         </a>
         {{#if @root.editable}}
-        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=' Gear'}}' data-action='deleteDoc'>
+        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Item')}}'
+          data-action='deleteDoc'>
           <i class='fas fa-trash'></i>
         </a>
         {{/if}}
