--- a/templates/actor/notes.hbs
+++ b/templates/actor/notes.hbs
@@ -1,14 +1,11 @@
 {{! Notes Tab }}
-<section
-  class='tab notes {{tab.cssClass}}'
-  data-group='primary'
-  data-tab='notes'
->
+<section class='tab notes {{tab.cssClass}}' data-group='primary' data-tab='notes'>
   {{! Editors must receive enriched text data from getData to properly handle rolls, UUID links, etc. }}
   {{#if editable}}
-    <prose-mirror name="system.notes" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.notes}}" collaborate="true" toggled="true">
-      {{{enrichedNotes}}}
-    </prose-mirror>
+  <prose-mirror name="system.notes" data-document-u-u-i-d="{{actor.uuid}}" value="{{system.notes}}" collaborate="true"
+    toggled="true">
+    {{{enrichedNotes}}}
+  </prose-mirror>
   {{else}} {{{enrichedNotes}}}
   {{/if}}
 </section>
