--- a/templates/actor/traits.hbs
+++ b/templates/actor/traits.hbs
@@ -1,5 +1,5 @@
 {{! Gear Tab }}
-<section class='tab features {{tab.cssClass}}' data-group='primary' data-tab='features'>
+<section class='tab inventory {{tab.cssClass}}' data-group='primary' data-tab='inventory'>
   <ol class='items-list'>
     <li class='item flexrow items-header'>
       <div class='item-name'></div>
@@ -8,10 +8,10 @@
         [{{@root.traitSlotsTaken}}/{{@root.system.trait_slots}}]</div>
       <div class='item-controls'>
         {{#if @root.editable}}
-        <a class='item-control item-create' title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Trait' )}}" data-action='createDoc'
-          data-document-class='Item' data-type='trait'>
+        <a class='item-control item-create' title="{{localize 'DOCUMENT.Create' type=(localize 'TYPE.Trait')}}"
+          data-action='createDoc' data-document-class='Item' data-type='trait'>
           <i class='fas fa-plus'></i>
-          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Trait' )}}
+          {{localize 'DOCUMENT.New' type=(localize 'TYPE.Trait')}}
         </a>
         {{/if}}
       </div>
@@ -26,11 +26,12 @@
         </div>
       </div>
       <div class='item-controls'>
-        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=' Trait'}}' data-action='viewDoc'>
+        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Trait')}}'
+          data-action='viewDoc'>
           <i class='fas fa-edit'></i>
         </a>
         {{#if @root.editable}}
-        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=' Trait'}}'
+        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Trait')}}'
           data-action='deleteDoc'>
           <i class='fas fa-trash'></i>
         </a>
