--- a/css/sdm.css
+++ b/css/sdm.css
@@ -63,11 +63,12 @@
   max-height: 0px;
 }
 
-.sheet.sdm.item {
-  min-width: 500px;
-  min-height: 500px;
-  max-width: 800px;
-  max-height: 800px;
+.mt-5 {
+  margin-top: 5px;
+}
+
+.mt-10 {
+  margin-top: 10px;
 }
 
 .grid,
@@ -688,6 +689,12 @@
   --sdm-c-white: #000000;
   --sdm-c-black: #ffffff;
   --sdm-c-groove: #11121f;
+}
+.sdm .sheet.sdm.item {
+  min-width: 500px;
+  min-height: 500px;
+  max-width: 800px;
+  max-height: 800px;
 }
 .sdm .sheet-hero-dice {
   margin-left: 5px;
