--- a/src/scss/global/_window.scss
+++ b/src/scss/global/_window.scss
@@ -27,9 +27,10 @@
   }
 }
 
-.sheet.sdm.item {
-  min-width: 500px;
-  min-height: 500px;
-  max-width: 800px;
-  max-height: 800px;
+.mt-5 {
+  margin-top: 5px;
+}
+
+.mt-10 {
+  margin-top: 10px;
 }
