--- a/templates/actor/burdens.hbs
+++ b/templates/actor/burdens.hbs
@@ -24,20 +24,60 @@
         <div class='item-image'>
           <img src='{{burden.img}}' title='{{burden.name}}' width='24' height='24' />
         </div>
+        {{#if (eq burden.type 'burden')}}
         <div>{{burden.name}}</div>
-        {{#if burden.system.is_skill}}
-        <a class='rollable' data-roll-type='attack' data-action='roll'>
-          <img src='icons/weapons/swords/sword-simple-white.webp' title='{{burden.name}}' width='24' height='24' />
-        </a>
+        {{/if}}
+
+        {{#if (eq burden.type 'gear') }}
+          <div class="flexrow">
+            {{#if (eq burden.system.type 'weapon')}}
+            {{#if burden.system.readied}}
+            <div class='rollable flexrow' data-action='roll' data-type='damage'
+                data-label='{{burden.name}}'>
+              <i class='fa-solid fa-dice-d20 roll-icon' title='{{burden.name}}'></i>
+            </div>
+            {{/if}}
+            {{/if}}
+            {{#if (gt burden.system.slots_taken 1)}}[{{burden.system.slots_taken}}] {{/if}}
+            {{#if (eq burden.system.size.unit 'cash')}} €{{burden.system.quantity}} {{/if}}
+            {{burden.name}}
+            {{#if (ne burden.system.size.unit 'cash')}}
+            {{#if (gt burden.system.quantity 1)}}
+            x{{burden.system.quantity}}
+            {{/if}}
+            {{/if}}
+          </div>
+        {{/if}}
+
+        {{#if (eq burden.type 'trait')}}
+        <div>{{burden.name}}
+          {{#if (eq burden.system.type 'skill')}}
+          {{#if (gt burden.system.skill_mod_final 0)}}(+{{burden.system.skill_mod_final}}){{/if}}
+          {{/if}}
+        </div>
         {{/if}}
       </div>
       <div class='item-controls'>
-        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize ' TYPE.Burden')}}'
+        {{#if (eq burden.type 'gear')}}
+        <a class="item-control">
+          <i class="fa-regular fa-shield" style="{{getReadiedStyle burden.system.readied}}" data-action="toggleReadied"
+            {{#if burden.system.readied}}
+              title="{{localize 'SDM.ItemReadied' }}"
+            {{else}}
+              title="{{localize 'SDM.ItemNotReadied'}}"
+            {{/if}}
+          ></i>
+        </a>
+        <a class="item-control">
+          <i class="fa-regular fa-exchange" data-action="transferItem" title="{{localize "DOCUMENT.Transfer" type=(localize 'TYPE.Item')}}"></i>
+        </a>
+        {{/if}}
+        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize (lookup @root.config.itemType burden.type))}}'
           data-action='viewDoc'>
           <i class='fas fa-edit'></i>
         </a>
         {{#if @root.editable}}
-        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize ' TYPE.Burden')}}'
+        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize (lookup @root.config.itemType burden.type))}}'
           data-action='deleteDoc'>
           <i class='fas fa-trash'></i>
         </a>
