--- a/templates/item/header.hbs
+++ b/templates/item/header.hbs
@@ -1,58 +1,10 @@
-<header class='sheet-header'>
-  <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' title='{{item.name}}' />
-  <div class='header-fields'>
-    <div class='document-name'>
-      <input name='name' type='text' value='{{item.name}}' placeholder='Name' />
-    </div>
-    <div class='grid grid-2col'>
-      <div class='resource'>
-        <label class='resource-label' for="system.quantity">{{localize 'SDM.Item.base.FIELDS.quantity.label'}}</label>
-        <input type='text' id="system.quantity" name='system.quantity' value='{{system.quantity}}'
-          data-dtype='Number' />
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>{{localize 'SDM.Item.base.FIELDS.cost.label'}}</label>
-        <input type='text' name='system.cost' value='{{system.cost}}'  />
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>{{localize 'SDM.Item.base.FIELDS.size.value.label'}}</label>
-        <input type='text' name='system.size.value' value='{{system.size.value}}' data-dtype='Number' />
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>{{localize 'SDM.Item.base.FIELDS.size.unit.label'}}</label>
-        <select name='system.size.unit'>
-          <option value=''></option>
-          {{selectOptions sizeUnits localize=true selected=system.size.unit}}
-        </select>
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>{{'Damage'}}</label>
-        {{system.damage.base}}
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>Readied</label>
-        <i class="fa-regular fa-shield" style="{{getReadiedStyle system.readied}}" data-action="toggleReadied"
-          data-tooltip="toggle readied"></i>
-      </div>
-      <div class='resource'>
-        <label class="resource-label">Is Weapon</label>
-        <label class="switch">
-          <input type="checkbox" {{checked system.is_weapon}} name="system.is_weapon">
-          <span class="slider round"></span>
-        </label>
-      </div>
-    </div>
-    <div class='grid grid-4col'>
-      {{#if system.is_weapon}}
-      <fieldset>
-        <legend>Weapon Damage</legend>
-        <input type='text' name='system.weapon_damage.base' value='{{system.weapon_damage.base}}'  />
-      </fieldset>
-      {{/if}}
-    </div>
-    {{! You may prefer to have a separate header file instead of this if statement}}
-    {{!-- {{#if (eq item.type 'base')}}
-    {{> "systems/sdm/templates/item/base-header.hbs"}}
-    {{/if}} --}}
-  </div>
-</header>
+{{! Sheet Header }}
+<div>
+  {{#if (eq item.type 'trait')}}
+  {{> ($$ "item/trait/header")}}
+  {{/if}}
+
+  {{#if (eq item.type 'gear')}}
+  {{> ($$ "item/gear/header")}}
+  {{/if}}
+</div>
