--- a/templates/item/gear/header.hbs
+++ b/templates/item/gear/header.hbs
@@ -1,53 +1,55 @@
-<header class='sheet-header'>
-  <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' title='{{item.name}}' />
-  <div class='header-fields'>
-    <div class='document-name'>
-      <input name='name' type='text' value='{{item.name}}' placeholder='Name' />
+<div>
+  <header class='sheet-header'>
+    <div class="flexcol flex-between flex-center">
+      <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' title='{{item.name}}' />
+      <div class="align-center mb-10 rollable" {{#if system.readied}} data-tooltip="{{localize 'SDM.ItemReadied' }}" {{else}}
+        data-tooltip="{{localize 'SDM.ItemNotReadied'}}" {{/if}} data-action="toggleReadied">
+        <div class='resource-label'>
+          {{#if system.readied}}
+          {{localize 'SDM.ItemReadied' }}
+          {{else}}
+          {{localize 'SDM.ItemNotReadied'}}
+          {{/if}}
+        </div>
+        <i class="fa-regular fa-shield resource-content" style="{{getReadiedStyle system.readied}}"></i>
+      </div>
     </div>
-    <div class='grid grid-2col'>
 
-      <div class='resource'>
-        <label class='resource-label'>{{localize 'SDM.ItemQuantity'}}
-          <input type='text' name='system.quantity' value='{{system.quantity}}' data-dtype='Number' />
-        </label>
+    <div class='header-fields mt-10'>
+      <div class='document-name'>
+        <input name='name' type='text' value='{{item.name}}' placeholder='Name' />
       </div>
-      <div class='resource'>
-        <label class='resource-label'>{{localize 'SDM.ItemCost'}}</label>
-        <input type='text' name='system.cost' value='{{system.cost}}' data-dtype='Text' />
+      <div class='grid grid-2col'>
+        <div class='resource'>
+          <label class='resource-label'>{{localize 'SDM.ItemQuantity'}}
+            <input type='text' name='system.quantity' value='{{system.quantity}}' data-dtype='Number' />
+          </label>
+        </div>
+        <div class='resource'>
+          <label class='resource-label'>{{localize 'SDM.ItemCost'}}</label>
+          <input type='text' name='system.cost' value='{{system.cost}}' data-dtype='Text' />
+        </div>
+        <div class='resource'>
+          <label class='resource-label'>{{localize 'SDM.ItemSizeValue'}}</label>
+          <input type='text' name='system.size.value' value='{{system.size.value}}' data-dtype='Number' />
+        </div>
+        <div class='resource'>
+          <label class='resource-label'>{{localize 'SDM.ItemSizeUnit'}}</label>
+          <select name='system.size.unit'>
+            <option value=''></option>
+            {{selectOptions sizeUnits localize=true selected=system.size.unit}}
+          </select>
+        </div>
       </div>
-      <div class='resource'>
-        <label class='resource-label'>{{localize 'SDM.ItemSizeValue'}}</label>
-        <input type='text' name='system.size.value' value='{{system.size.value}}' data-dtype='Number' />
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>{{localize 'SDM.ItemSizeUnit'}}</label>
-        <select name='system.size.unit'>
-          <option value=''></option>
-          {{selectOptions sizeUnits localize=true selected=system.size.unit}}
-        </select>
-      </div>
-
+  </header>
+  <header>
+    <div class='grid grid-3col'>
       <div class="resource">
         <label class='resource-label'>{{localize 'SDM.ItemGearType'}}</label>
         <select name='system.type' class="resource-content">
           <option value=''></option>
           {{selectOptions config.gearType localize=true selected=system.type}}
         </select>
-      </div>
-
-      <div class='resource flex-group-center flexrow'>
-        <div>
-          <label class='resource-label'>
-            {{#if system.readied}}
-            {{localize 'SDM.ItemReadied' }}
-            {{else}}
-            {{localize 'SDM.ItemNotReadied'}}
-            {{/if}}
-          </label>
-          <i class="fa-regular fa-shield resource-content" style="{{getReadiedStyle system.readied}}"
-            data-action="toggleReadied" {{#if system.readied}} data-tooltip="{{localize 'SDM.ItemReadied' }}" {{else}}
-            data-tooltip="{{localize 'SDM.ItemNotReadied'}}" {{/if}}></i>
-        </div>
       </div>
 
       {{#if (eq item.system.type 'weapon')}}
@@ -114,14 +116,19 @@
           <input type='text' name='system.power.duration' value='{{system.power.duration}}' />
         </div>
       </div>
+
       <div class='resource'>
         <label class='resource-label'>
-          {{localize 'SDM.PowerOvercharge'}}
+          {{localize 'SDM.DefaultAbility'}}
         </label>
         <div class='resource-content'>
-          <input type='text' name='system.power.overcharge' value='{{system.power.overcharge}}' />
+          <select name="system.default_ability" id="system.default_ability">
+            <option value=""></option>
+            {{selectOptions config.abilities localize=true selected=system.default_ability}}
+          </select>
         </div>
       </div>
+
       <div class='resource'>
         <label class='resource-label'>
           {{localize 'SDM.PowerRollFormula'}}
@@ -130,8 +137,18 @@
           <input type='text' name='system.power.roll_formula' value='{{system.power.roll_formula}}' />
         </div>
       </div>
+
+      <div class='resource grid-span-2'>
+        <label class='resource-label'>
+          {{localize 'SDM.PowerOvercharge'}}
+        </label>
+        <div class='resource-content'>
+          <input type='text' name='system.power.overcharge' value='{{system.power.overcharge}}' />
+        </div>
+      </div>
       {{/if}}
     </div>
-  </div>
-  </div>
+</div>
+</div>
 </header>
+</div>
