--- a/css/sdm.css
+++ b/css/sdm.css
@@ -63,12 +63,32 @@
   max-height: 0px;
 }
 
+.application.sheet.sdm.item {
+  min-width: 480px;
+  min-height: 525px;
+}
+
+.application.sheet.sdm.item.minimized {
+  min-width: 0px;
+  min-height: 0px;
+  max-width: 0px;
+  max-height: 0px;
+}
+
 .mt-5 {
   margin-top: 5px;
 }
 
 .mt-10 {
   margin-top: 10px;
+}
+
+.mb-10 {
+  margin-bottom: 10px;
+}
+
+.mb-20 {
+  margin-bottom: 20px;
 }
 
 .grid,
@@ -729,3 +749,5 @@
   top: 39px;
   left: 9px;
 }
+
+/*# sourceMappingURL=sdm.css.map */
