--- a/templates/actor/character/header.hbs
+++ b/templates/actor/character/header.hbs
@@ -302,7 +302,8 @@
                 {{localize 'SDM.PowerCost'}}
               </label>
               <div class='resource-content flexrow flex-center flex-between'>
-                <input type='text' name='system.power_cost' value='{{system.power_cost}}' data-dtype='Number' style="text-align:center;"/>
+                <input type='text' name='system.power_cost' value='{{system.power_cost}}' data-dtype='Number'
+                  style="text-align:center;" />
               </div>
             </div>
           </div>
