--- a/templates/actor/items.hbs
+++ b/templates/actor/items.hbs
@@ -16,66 +16,7 @@
       </div>
     </li>
     {{#each items as |item id|}}
-    <li class='item flexrow' data-item-id='{{item._id}}' data-drag='true' data-document-class='Item'>
-      <div class='item-name'>
-        <div class='item-image'>
-          <img src='{{item.img}}' title='{{item.name}}' width='24' height='24' />
-        </div>
-        <div class="flexrow">
-          {{#if (eq item.system.type 'weapon')}}
-          {{#if item.system.readied}}
-          <div class='rollable flexrow' data-action='roll' data-type='damage'
-              data-label='{{item.name}}'>
-            <i class='fa-solid fa-dice-d20 roll-icon' title='{{item.name}}'></i>
-          </div>
-          {{/if}}
-          {{/if}}
-          {{#if (gt item.system.slots_taken 1)}}[{{item.system.slots_taken}}] {{/if}}
-          {{#if (eq item.system.size.unit 'cash')}} €{{item.system.quantity}} {{/if}}
-          {{item.name}}
-          {{#if (ne item.system.size.unit 'cash')}}
-          {{#if (gt item.system.quantity 1)}}
-          x{{item.system.quantity}}
-          {{/if}}
-          {{/if}}
-        </div>
-        <div class='flexrow align-center'>
-          <div>
-            {{#if item.system.versatile}}
-            {{!-- <div class='rollable' data-roll-type='item' data-action='roll' data-versatile="versatile">
-              <img src='icons/weapons/swords/swords-short.webp' title='{{item.name}}' width='24' height='24' />
-            </div> --}}
-            {{/if}}
-          </div>
-          <div>
-          </div>
-        </div>
-      </div>
-      <div class='item-controls'>
-        <a class="item-control">
-          <i class="fa-regular fa-shield" style="{{getReadiedStyle item.system.readied}}" data-action="toggleReadied"
-            {{#if item.system.readied}}
-              title="{{localize 'SDM.ItemReadied' }}"
-            {{else}}
-              title="{{localize 'SDM.ItemNotReadied'}}"
-            {{/if}}
-          ></i>
-        </a>
-        <a class="item-control">
-          <i class="fa-regular fa-exchange" data-action="transferItem" title="{{localize "DOCUMENT.Transfer" type=(localize 'TYPE.Item')}}"></i>
-        </a>
-        <a class='item-control item-edit' title='{{localize "DOCUMENT.Update" type=(localize 'TYPE.Item')}}'
-          data-action='viewDoc'>
-          <i class='fas fa-edit'></i>
-        </a>
-        {{#if @root.editable}}
-        <a class='item-control item-delete' title='{{localize "DOCUMENT.Delete" type=(localize 'TYPE.Item')}}'
-          data-action='deleteDoc'>
-          <i class='fas fa-trash'></i>
-        </a>
-        {{/if}}
-      </div>
-    </li>
+     {{> ($$ "actor/item") item=item }}
     {{/each}}
   </ol>
 
