--- a/templates/item/gear/header.hbs
+++ b/templates/item/gear/header.hbs
@@ -2,8 +2,9 @@
   <header class='sheet-header'>
     <div class="flexcol flex-between flex-center">
       <img class='profile-img' src='{{item.img}}' data-edit='img' data-action='onEditImage' title='{{item.name}}' />
-      <div class="align-center mb-10 rollable" {{#if system.readied}} data-tooltip="{{localize 'SDM.ItemReadied' }}" {{else}}
-        data-tooltip="{{localize 'SDM.ItemNotReadied'}}" {{/if}} data-action="toggleReadied">
+      <div class="align-center mb-10 mr-10 rollable" {{#if system.readied}}
+        data-tooltip="{{localize 'SDM.ItemReadied' }}" {{else}} data-tooltip="{{localize 'SDM.ItemNotReadied'}}" {{/if}}
+        data-action="toggleReadied">
         <div class='resource-label'>
           {{#if system.readied}}
           {{localize 'SDM.ItemReadied' }}
@@ -61,6 +62,31 @@
           <input type='text' name='system.weapon.damage.base' value='{{system.weapon.damage.base}}' />
         </div>
       </div>
+      <div class="resource">
+         <label class='resource-label'>{{localize 'SDM.WeaponRange'}}</label>
+        <select name='system.weapon.range' class="resource-content">
+          <option value=''></option>
+          {{selectOptions config.rangeType localize=true selected=system.weapon.range}}
+        </select>
+      </div>
+      <div class='resource align-center'>
+        <label class='resource-label'>
+          {{localize 'SDM.WeaponVersatile'}}
+        </label>
+        <div class='resource-content align-center'>
+          <input type='checkbox' name='system.weapon.versatile' {{checked system.weapon.versatile}} />
+        </div>
+      </div>
+      {{#if system.weapon.versatile}}
+      <div class='resource'>
+        <label class='resource-label'>
+          {{localize 'SDM.WeaponVersatileDamage'}}
+        </label>
+        <div class='resource-content'>
+          <input type='text' name='system.weapon.damage.versatile' value='{{system.weapon.damage.versatile}}' />
+        </div>
+      </div>
+      {{/if}}
       {{/if}}
 
 
@@ -84,68 +110,9 @@
       {{/if}}
 
       {{#if (eq item.system.type 'power')}}
-      <div class='resource'>
-        <label class='resource-label'>
-          {{localize 'SDM.PowerLevel'}}
-        </label>
-        <div class='resource-content'>
-          <input type='text' name='system.power.level' value='{{system.power.level}}' data-dtype="Number" />
-        </div>
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>
-          {{localize 'SDM.PowerRange'}}
-        </label>
-        <div class='resource-content'>
-          <input type='text' name='system.power.range' value='{{system.power.range}}' />
-        </div>
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>
-          {{localize 'SDM.PowerTarget'}}
-        </label>
-        <div class='resource-content'>
-          <input type='text' name='system.power.target' value='{{system.power.target}}' />
-        </div>
-      </div>
-      <div class='resource'>
-        <label class='resource-label'>
-          {{localize 'SDM.PowerDuration'}}
-        </label>
-        <div class='resource-content'>
-          <input type='text' name='system.power.duration' value='{{system.power.duration}}' />
-        </div>
-      </div>
-
-      <div class='resource'>
-        <label class='resource-label'>
-          {{localize 'SDM.DefaultAbility'}}
-        </label>
-        <div class='resource-content'>
-          <select name="system.default_ability" id="system.default_ability">
-            <option value=""></option>
-            {{selectOptions config.abilities localize=true selected=system.default_ability}}
-          </select>
-        </div>
-      </div>
-
-      <div class='resource'>
-        <label class='resource-label'>
-          {{localize 'SDM.PowerRollFormula'}}
-        </label>
-        <div class='resource-content'>
-          <input type='text' name='system.power.roll_formula' value='{{system.power.roll_formula}}' />
-        </div>
-      </div>
-
-      <div class='resource grid-span-2'>
-        <label class='resource-label'>
-          {{localize 'SDM.PowerOvercharge'}}
-        </label>
-        <div class='resource-content'>
-          <input type='text' name='system.power.overcharge' value='{{system.power.overcharge}}' />
-        </div>
-      </div>
+      {{!-- Start fragment --}}
+      {{> ($$ "item/power") item=item}}
+      {{!-- End fragment --}}
       {{/if}}
     </div>
 </div>
